# image_processor

./: CMakeLists.txt  argument_parser.h  argument_parses.cpp  image.cpp  image.h  image_processor.cpp  readme.md
filters/: blur.cpp  blur.h  crop.cpp  crop.h  crystallize.cpp  crystallize.h  edge.cpp  edge.h  filters.cpp  filters.h  grayscale.cpp  grayscale.h  negative.cpp  negative.h  sharpening.cpp  sharpening.h
